Fix search input width on mobile

--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -3,13 +3,10 @@
   flex-basis: 100%;
   display: flex;
   flex-direction: column;
-  /* transform: scaleY(0); */
-  /* overflow: hidden; */
-  /* transition: margin 0.2s ease-in-out, transform 0.2s ease-in-out; */
 }
 
 .input {
-  max-width: 700px;
+  max-width: calc(100vw - 44px);
   align-self: center;
   font-size: 36px;
   line-height: 1.2;
@@ -22,6 +19,7 @@
 @media screen and (min-width: 700px) {
   .input {
     font-size: 72px;
+    max-width: 700px;
   }
 }
 
